[gd_scene load_steps=2 format=3 uid="uid://ui_shop"]

[ext_resource type="Script" path="res://scripts/UI/Shop.gd" id="1"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.8, 0.6, 0.1, 1)
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BalanceLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Balance: 0 SC"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="CatalogContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonBar" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="CloseButton" type="Button" parent="Panel/ButtonBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="IAPButton" type="Button" parent="Panel/ButtonBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy Skycrowns"

[connection signal="pressed" from="Panel/ButtonBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/ButtonBar/IAPButton" to="." method="_on_iap_button_pressed"]
